feat: created `GET products after first render` app refactor: renamed GETdata to GET users
dependency: added some additional packages for api

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "axios": "0.27.2",
+    "faker": "5.5.3",
     "miragejs": "0.1.45",
     "react": "18.0.0",
     "react-dom": "18.0.0",
